--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="main">
+            <aside class="box-sx">
+                <div class="header-box-sx">
+                    <div class="logo"><img src="assets/img/logo.svg" alt="logo"></div>
+                    <div class="logo"><img src="assets/img/logo-small.svg" alt="logo"></div>
+                    <div class="logo">
+                        <img src="assets/img/home.svg" alt="home">
+                        <span>Home</span>
+                    </div>
+                    <div class="logo">
+                        <img src="assets/img/search.svg" alt="ricerca">
+                        <span>Cerca</span>
+                    </div>
+                    <div class="logo">
+                        <img src="assets/img/libreria.svg" alt="Libreria">
+                        <span>La tua libreria</span>
+                    </div>
+                </div>
+            </aside>
+        </div>
+    </div>
 </body>
 </html>
