--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="app-wrapper">
         <main class="flex-container">
-          <nav id="nav-menu" class="flex-container">
+          <li id="nav-menu" class="flex-container">
             <div class="logo">
                 <img src="assets/img/logo.svg" alt="Logo Spotify"/>
               </div>
@@ -29,7 +29,52 @@
                     </a>
                   </li>
                 </ul>
+                <h2>PLAYLIST</h2>
+                <li class="playlist-menu">
+                    <li class="create-item">
+                       <a href="#">
+                         <span>+</span>
+                         Crea Playlist
+                       </a>
+                    </li>
+                    <li>
+                        <a href="#">Nome Playlist</a>
+                      </li>
+                      <li>
+                        <a href="#">Nome Playlist</a>
+                      </li>
+                      <li>
+                        <a href="#">Nome Playlist</a>
+                      </li>
+                      <li>
+                        <a href="#">Nome Playlist</a>
+                      </li>
+                      <li>
+                        <a href="#">Nome Playlist</a>
+                      </li>
+                      <li>
+                        <a href="#">Nome Playlist</a>
+                      </li>
+                      <li>
+                        <a href="#">Nome Playlist</a>
+                      </li>
+                    </li>
+                </li>
+                <div class="user-area">
+                    <a class="install-app" href="#">
+                        <img src="assets/img/download.svg" alt="icona download">
+                        Installa app
+                    </a>
+                    <hr>
+                    <a  class="user-profile" href="#">
+                        <span>
+                            <img src="assets/img/profile.svg" alt="icona profilo">
+                        </span>
+                        Marco Antonio Rosato
+                    </a>
+                </div>
           </nav>
+          
         </main>
     </div>          
 </body>
