--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="app-wrapper">
         <main class="flex-container">
-          <li id="nav-menu" class="flex-container">
+          <nav id="nav-menu" class="flex-container">
             <div class="logo">
-                <img src="assets/img/logo.svg" alt="Logo Spotify"/>
+                <img src="assets/img/logo.svg" alt="logo spotify"/>
               </div>
               <ul class="main-menu">
                 <li class="current">
@@ -30,7 +30,7 @@
                   </li>
                 </ul>
                 <h2>PLAYLIST</h2>
-                <li class="playlist-menu">
+                <ul class="playlist-menu">
                     <li class="create-item">
                        <a href="#">
                          <span>+</span>
@@ -58,8 +58,7 @@
                       <li>
                         <a href="#">Nome Playlist</a>
                       </li>
-                    </li>
-                </li>
+                    </ul>
                 <div class="user-area">
                     <a class="install-app" href="#">
                         <img src="assets/img/download.svg" alt="icona download">
@@ -70,11 +69,11 @@
                         <span>
                             <img src="assets/img/profile.svg" alt="icona profilo">
                         </span>
-                        Marco Antonio Rosato
+                        Marco Antonio 
                     </a>
                 </div>
-          </nav>
-          
+           </nav>
+
         </main>
     </div>          
 </body>
