--- a/index.html
+++ b/index.html
@@ -73,7 +73,79 @@
                     </a>
                 </div>
            </nav>
-
+           <div id="main-content">
+            <nav>
+                <ul class="flex-container">
+                  <li>
+                    <a class="current" href="#">IN EVIDENZA</a>
+                  </li>
+                  <li><a href="#">PODCAST</a></li>
+                  <li><a href="#">CLASSIFICHE</a></li>
+                  <li><a href="#">GENERI E MOOD</a></li>
+                  <li><a href="#">NUOVE USCITE</a></li>
+                  <li><a href="#">SCOPRI</a></li>
+                </ul>
+            </nav>
+            <section>
+                <h2>Recently played</h2>
+                <div class="colums flex-container">
+                    <div class="col">
+                        <div class="card">
+                            <div class="container-card">
+                                <img src="assets/img/metal_lifting.jpg" alt="metal lifting">
+                                <h3>Heavy Metal</h3>
+                                <div class="subtitle">Subtitle</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="container-card">
+                                <img src="assets/img/metal_lifting.jpg" alt="Heavy Metal">
+                                <h3>Heavy Metal</h3>
+                                <div class="subtitle">Subtitle</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="container-card">
+                                <img src="assets/img/metal_lifting.jpg" alt="Stranger Things">
+                                <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
+                                <div class="subtitle">Kyle Dixon & Micheal Stein</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="container-card">
+                                <img src="assets/img/metal_lifting.jpg" alt="A quiet place">
+                                <h3>A quiet place</h3>
+                                <div class="subtitle">Subtitle</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="container-card">
+                                <img src="assets/img/metal_lifting.jpg" alt="Split">
+                                <h3>Split</h3>
+                                <div class="subtitle">Subtitle</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="container-card">
+                                <img src="assets/img/metal_lifting.jpg" alt="A cure for wellness">
+                                <h3>A cure for wellness</h3>
+                                <div class="subtitle">Subtitle</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+           </div>
         </main>
     </div>          
 </body>
