--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="container-card">
-                                <img src="assets/img/metal_lifting.jpg" alt="Heavy Metal">
+                                <img src="assets/img/stranger.jpeg" alt="Heavy Metal">
                                 <h3>Heavy Metal</h3>
                                 <div class="subtitle">Subtitle</div>
                             </div>
@@ -110,7 +110,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="container-card">
-                                <img src="assets/img/metal_lifting.jpg" alt="Stranger Things">
+                                <img src="assets/img/aquietplace.jpeg" alt="Stranger Things">
                                 <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
                                 <div class="subtitle">Kyle Dixon & Micheal Stein</div>
                             </div>
@@ -119,7 +119,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="container-card">
-                                <img src="assets/img/metal_lifting.jpg" alt="A quiet place">
+                                <img src="assets/img/split.jpeg" alt="A quiet place">
                                 <h3>A quiet place</h3>
                                 <div class="subtitle">Subtitle</div>
                             </div>
@@ -128,7 +128,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="container-card">
-                                <img src="assets/img/metal_lifting.jpg" alt="Split">
+                                <img src="assets/img/cure.jpeg" alt="Split">
                                 <h3>Split</h3>
                                 <div class="subtitle">Subtitle</div>
                             </div>
@@ -137,7 +137,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="container-card">
-                                <img src="assets/img/metal_lifting.jpg" alt="A cure for wellness">
+                                <img src="assets/img/sinister.jpeg" alt="A cure for wellness">
                                 <h3>A cure for wellness</h3>
                                 <div class="subtitle">Subtitle</div>
                             </div>
