--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <span>
                             <img src="assets/img/profile.svg" alt="icona profilo">
                         </span>
-                        Marco Antonio 
+                        Emanuela 
                     </a>
                 </div>
            </nav>
@@ -101,16 +101,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="container-card">
-                                <img src="assets/img/stranger.jpeg" alt="Heavy Metal">
-                                <h3>Heavy Metal</h3>
-                                <div class="subtitle">Subtitle</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card">
-                            <div class="container-card">
-                                <img src="assets/img/aquietplace.jpeg" alt="Stranger Things">
+                                <img src="assets/img/stranger.jpeg" alt="Stranger Things">
                                 <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
                                 <div class="subtitle">Kyle Dixon & Micheal Stein</div>
                             </div>
@@ -119,7 +110,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="container-card">
-                                <img src="assets/img/split.jpeg" alt="A quiet place">
+                                <img src="assets/img/aquietplace.jpeg" alt="A quiet place">
                                 <h3>A quiet place</h3>
                                 <div class="subtitle">Subtitle</div>
                             </div>
@@ -128,7 +119,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="container-card">
-                                <img src="assets/img/cure.jpeg" alt="Split">
+                                <img src="assets/img/split.jpeg" alt="Split">
                                 <h3>Split</h3>
                                 <div class="subtitle">Subtitle</div>
                             </div>
@@ -137,16 +128,102 @@
                     <div class="col">
                         <div class="card">
                             <div class="container-card">
-                                <img src="assets/img/sinister.jpeg" alt="A cure for wellness">
+                                <img src="assets/img/cure.jpeg" alt="A cure for wellness">
                                 <h3>A cure for wellness</h3>
+                                <div class="subtitle">Subtitle</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="container-card">
+                                <img src="assets/img/sinister.jpeg" alt="Sinister">
+                                <h3>Sinister</h3>
                                 <div class="subtitle">Subtitle</div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
+            <section>
+                <h2>Creato per Emanuela</h2>
+                <div class="subtitle">Piu` ascolti, piu` saranno accurati i suggerimenti.</div>
+                <div class="columns flex-container">
+                    <div class="col">
+                        <div class="card">
+                            <div class="container-card">
+                                <img src="assets/img/radar.jpeg" alt="Release radar">
+                                <h3>Release Radar</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="container-card">
+                                <img src="assets/img/mixdaily.jpeg" alt="Daily Mix 1">
+                                <h3>Daily Mix 1</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <h2>Artisti più popolari</h2>
+                <div class="subtitle">Più ascolti, più saranno accurati i suggerimenti</div>
+                <div class="columnsflex-container">
+                    <div class="col">
+                        <div class="card">
+                            <div class="container-card">
+                                <img src="assets/img/youg.jpeg" alt="Lana Del Ray">
+                                <h3>Lana Del Ray</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="container-card">
+                                <img src="assets/img/einaudi.jpeg" alt="Ludovico Einaudi">
+                                <h3>Ludovico Einaudi</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+            </section>
            </div>
+           <div id="upgrade-bar" class="flex-container">
+            <a href="#" class="btn">EFFETTUA L'UPGRADE</a>
+          </div>
         </main>
+        <footer>
+           <div class="footer-player flex-container">
+            <div class="controllers">
+                <i class="fa-solid fa-shuffle"></i>
+                <i class="fa-solid fa-backward-step"></i>
+                <i class="far fa-play-circle fa-2x"></i>
+                <i class="fa-solid fa-forward-step"></i>
+                <i class="fa-solid fa-rotate-right"></i>
+            </div>
+           </div>
+           <div class="bar-track flex-container">
+            <span>0:25</span>
+            <div class="bar empty">
+              <div class="bar full"></div>
+            </div>
+            <span>4:35</span>
+           </div>
+           <div class="footer-side flex-container volume-control">
+            <div class="icons">
+              <i class="fa-solid fa-list"></i>
+              <i class="fa-solid fa-desktop"></i>
+              <i class="fa-solid fa-volume-high"></i>
+            </div>
+            <div class="bar empty">
+              <div class="bar full"></div>
+             </div>
+           </div>
+              </div>
+              </div>
+        </footer>
     </div>          
 </body>
 </html>
