--- a/index.html
+++ b/index.html
@@ -175,16 +175,16 @@
                         <div class="card">
                             <div class="container-card">
                                 <img src="assets/img/youg.jpeg" alt="Lana Del Ray">
-                                <h3>Lana Del Ray</h3>
                             </div>
+                                <h3 class="margin-right">Lana Del Ray</h3>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card">
                             <div class="container-card">
                                 <img src="assets/img/einaudi.jpeg" alt="Ludovico Einaudi">
-                                <h3>Ludovico Einaudi</h3>
                             </div>
+                                <h3 class="margin-right">Ludovico Einaudi</h3>
                         </div>
                     </div>
                 </div> 
